--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "private": false,
-  "name": "react-xs-component",
-  "description": "react 组件",
-  "version": "1.1.0",
+  "name": "xhooks",
+  "description": "简化ahooks源码方便进行学习",
+  "version": "1.0.0",
   "author": "xs",
   "license": "MIT",
   "keywords": [
     "react",
-    "xs",
-    "component"
+    "ahooks"
   ],
   "homepage": "https://github.com/aiketangdezhiyi/xhooks",
   "repository": {
@@ -47,7 +46,8 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.24.5",
     "classnames": "^2.3.2",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "yuxuannnn_utils": "^1.1.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.1",
